--- a/web/lazy css.css
+++ b/web/lazy css.css
@@ -30,11 +30,16 @@
   }
 
   p {
-    font-size: 30px;
+    font-size: 15px;
+  }
+
+  body {
+    margin: 0px;
   }
   .dropdown {
     float: right;
     overflow: hidden;
+    padding: 0px;
   }
   
   .dropdown .dropbtn {
@@ -43,7 +48,6 @@
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -52,31 +56,28 @@
   /* .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
     background-color: red;
   } */
-  
+
+
   .dropdown-content {
     display: none;
-    position: relative; ;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
+    font-size: inherit;
     float: right;
-    color: rgb(182, 179, 179);
+    background-color: rgb(102, 102, 102);
+    position: absolute;
+    top: 48px;
+    right: 0px;
+  }
+
+  .dropdown-content a {
+    display: block;
     padding: 12px 16px;
-    text-decoration: none;
-    display: block;
     text-align: left;
+    color: ivory;
   }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .show {
-    display: block;
+
+  .dropdown-content a:hover{
+    background-color: #333;
+    color: #f2f2f2;
   }
 
 .left, .right {
@@ -85,14 +86,14 @@
 }
 
 .main {
-  float: left;
+  /* float: left; */
   width: 60%; /* The width is 60%, by default */
 }
 
-.rows {
+.wrapper {
   margin-left: 20vw;
   margin-right: 20vw;
-  margin-top: 5vh;
+  margin-top: 10vh;
 }
 
   @media screen and (max-width: 600px) {
@@ -100,3 +101,24 @@
       background-color: olive;
     }
   }
+  
+  .profile4 {
+    border: 1px solid black;
+    height: 40px;
+    width: 40px;
+    margin: 10px;
+    border-radius: 50px;
+    margin: 0px;
+  }
+
+  .rows {
+    margin-top: 55px;
+  }
+
+.test {
+  display: block;
+}  
+
+.test a {
+  display: block;
+}
